--- a/requirements.txt
+++ b/requirements.txt
@@ -48,3 +48,9 @@ typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 zstandard==0.23.0
+
+# Testing dependencies
+pytest==8.4.1
+pytest-cov==6.2.1
+pytest-asyncio==1.1.0
+fastapi[standard]
