--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
+pydantic-settings==2.3.4
 python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2025.7.34
